--- a/css/menuPill.css
+++ b/css/menuPill.css
@@ -11,9 +11,9 @@
 }
 
 #menuPill .nav-link {
-    --bs-navbar-active-color: var(--ab-theme-400);
-    --bs-navbar-hover-color: var(--ab-theme-200);
-    --bs-navbar-link-hover-color: var(--ab-theme-200);
+    --bs-navbar-active-color: var(--ab-grey-400);
+    --bs-navbar-hover-color: var(--ab-grey-200);
+    --bs-navbar-link-hover-color: var(--ab-grey-200);
     
     display: flex;
     align-items: center;
@@ -60,7 +60,7 @@
 }
 
 .nav-tooltip {
-    --bs-tooltip-color: var(--ab-theme-200);
+    --bs-tooltip-color: var(--ab-grey-200);
     --bs-tooltip-opacity: 0.7;
 }
 
@@ -92,7 +92,7 @@
     #menuPill .nav-link.active .menu-label {
         max-width: 100%;
         padding-right: 1rem;
-        color: var(--ab-theme-200);
+        color: var(--ab-grey-200);
     }
 
     #menuPill > .nav-item:nth-child(1) .icon-container {
