--- a/css/hovercard.css
+++ b/css/hovercard.css
@@ -13,11 +13,11 @@ So make sure images are higher res, same size and square. Make sure they're larg
     height: 225px;
     border-radius: 15px;
     padding: 1.5rem;
-    background:white;
+    background: white;
     position: relative;
     display: flex;
     align-items: flex-end;
-    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 7px 10px yellow;
     transition: transform 0.4s ease-out;
 }
 
@@ -70,7 +70,7 @@ So make sure images are higher res, same size and square. Make sure they're larg
 }
 
 .hc-card:hover::before {
-    opacity: 1;
+    opacity: 0.65;
 }
 
 @media(min-width: 1200px) {
