--- a/css/site.css
+++ b/css/site.css
@@ -5,13 +5,13 @@ font-family: 'Roboto', sans-serif; */
 :root {
     /* fonts */
     --ab-title-font: 'Bebas Neue', sans-serif;
-    --ab-subtitle-font: font-family: 'Fira Sans', sans-serif;
+    --ab-subtitle-font:'Fira Sans', sans-serif;
     --ab-heading-font: 'Bebas Neue', sans-serif;
     --ab-body-font: 'Roboto', sans-serif;
 
     /* basic colors */
     --ab-dark-color: #212121;
-    --ab-light-color: #deeefb;
+    --ab-light-color: #eeeeee;
     --ab-background-color: rgba(350, 250, 250, 0.8);
 
     /* text styles */
@@ -19,6 +19,7 @@ font-family: 'Roboto', sans-serif; */
     --ab-font-weight: 400;
     --ab-line-height: 1.5rem;
     --ab-title-color: var(--ab-dark-color);
+    --ab-link-color: #ff8888;
 }
 
 
@@ -27,7 +28,7 @@ body {
     font-family: var(--ab-body-font);
     font-size: var(--ab-font-size);
     font-weight: var(--ab-font-weight);
-    line-height: var(--ab-dark-color);
+    color: var(--ab-light-color);
     background: var(--ab-background-color);
 }
 
@@ -43,15 +44,15 @@ h2,
 .h2,
 h1,
 .h1 {
-    font-family: var(--ab-heading-font);
+    font-family: 'Fira Sans', sans-serif;
     font-weight: 700;
     text-transform: uppercase;
-    color: #343333;
     letter-spacing: .1rem;
+    
 }
 
 a {
-    color: var(--ab-grey-300);
+    color: var(--ab-link-color);
 }
 
 a:hover {
@@ -71,10 +72,10 @@ section {
 }
 
 .btn-primary {
-    --bs-btn-bg: var(--ab-grey-600);
-    --bs-btn-border-color: var(--ab-grey-600);
-    --bs-btn-hover-bg: var(--ab-grey-700);
-    --bs-btn-hover-color: var(--ab-grey-700);
+    --bs-btn-bg: var(--ab-dark-color);
+    --bs-btn-border-color: yellow;
+    --bs-btn-hover-bg: yellow;
+    --bs-btn-hover-color: var(--ab-dark-color);
 }
 
 /* End: Element Overrides */
@@ -82,7 +83,7 @@ section {
 /* Begin: Landing Section-Home */
 
 #home {
-    background-color: var(--ab-grey-900);
+    background-color: var(--ab-dark-color);
     background-image: url(/img/clouds.jpg);
     background-size: cover;
     background-position: center;
@@ -100,11 +101,6 @@ section {
     align-items: center;
 }
 
-.mainTitle,
-.subTitle {
-    color: var(--ab-light-color);
-    text-transform: uppercase;
-}
 
 .mainTitle {
     font-family: var(--ab-title-font);
@@ -139,12 +135,12 @@ section {
 
 .section-page:nth-child(even),
 .section-page:nth-child(even)>.container::after {
-    background-color: var(--ab-grey-300);
+    background-color:#424242;
 }
 
 .section-page:nth-child(odd),
 .section-page:nth-child(odd)>.container::after {
-    background-color: var(--ab-grey-200);
+    background-color: #2c2c2c;
 }
 
 /*section dividers to play with */
@@ -176,7 +172,7 @@ z-index: 1;
 .socialIcons {
     font-size: 2rem;
     transition: color 0.25s;
-    color: var(--ab-grey-600)
+    color: #91998c;
 }
 
 .socialIcons:hover {
