--- a/css/site.css
+++ b/css/site.css
@@ -152,7 +152,7 @@ section {
 .section-page>.container::after {
 content: "";
 position: absolute;
-bottom: 0;
+bottom: 1px;
 left: 0;
 right: 0;
 height: 3rem;
