--- a/css/site.css
+++ b/css/site.css
@@ -57,7 +57,7 @@ a {
 }
 
 a:hover {
-    color: #ffe612;
+    color: #fff18d;
     color: var(--ab-link-color);
 }
 
@@ -71,15 +71,15 @@ section {
 
 .btn-primary {
     --bs-btn-bg: var(--ab-dark-color);
-    --bs-btn-border-color: #ffe612;
-    --bs-btn-hover-bg: #ffe612;
+    --bs-btn-border-color: #fff18d;
+    --bs-btn-hover-bg: #fff18d;
     --bs-btn-hover-color: var(--ab-dark-color);
 }
 
-.btn-#ffe612:hover {
-    background-color: #ffe612;
+.btn-#fff18d:hover {
+    background-color: #fff18d;
     color: var(--ab-dark-color);
-    border-color: #ffe612;
+    border-color: #fff18d;
 }
 
 /* End: Element Overrides */
@@ -123,6 +123,15 @@ section {
 .mainLogo {
     height: .5em;
     padding-left: .1em;
+}
+
+#contact-card {
+    background-color: var(--ab-dark-color);
+    background-image: url(/img/clouds.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
 }
 
 /* End Landing Section-Home */
@@ -179,7 +188,7 @@ z-index: 1;
 }
 
 .socialIcons:hover {
-    color: #ffe612;
+    color: #fff18d;
 }
 
 footer.fixed-bottom {
