--- a/css/iconCards.css
+++ b/css/iconCards.css
@@ -8,16 +8,16 @@
 }
 
 .icon-card-body {
-    background-color: var(--ab-grey-900);
+    background-color: #201F1F;
     color: var(--ab-light-color);
     padding: 2rem;
     padding-top: 4rem;
     text-align: center;
     border-radius: .5rem;
-    border-color: var(--ab-grey-900);
+    border-color:#201F1F;
     border-style: solid;
     border-width: 2px;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: #201F1F 0px 10px 20px, #474545 0px 6px 6px;
     margin-top: -2.5rem;
     transition: background-color 0.25 ease-in-out,
     border-color 0.25 ease-in-out, box-shadow 0.25, ease-in-out;
@@ -25,8 +25,8 @@
 }
 
 .icon-card:hover .icon-card-body {
-    background-color: var(--ab-grey-850);
-    border-color: var(--ab-grey-500);
+    background-color: #302d2d;
+    border-color: #302d2d;
     box-shadow: box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
