--- a/css/iconCards.css
+++ b/css/iconCards.css
@@ -14,23 +14,23 @@
     padding-top: 4rem;
     text-align: center;
     border-radius: .5rem;
-    border-color:#201F1F;
+    border-color: #201F1F;
     border-style: solid;
     border-width: 2px;
     box-shadow: #201F1F 0px 10px 20px, #474545 0px 6px 6px;
     margin-top: -2.5rem;
     transition: background-color 0.25 ease-in-out,
-    border-color 0.25 ease-in-out, box-shadow 0.25, ease-in-out;
+        border-color 0.25 ease-in-out, box-shadow 0.25, ease-in-out;
     height: calc(100% - 2.5rem);
 }
 
 .icon-card:hover .icon-card-body {
     background-color: #302d2d;
     border-color: #302d2d;
-    box-shadow: box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
-.icon > img {
+.icon>img {
     height: 5rem;
 }
 
