--- a/css/site.css
+++ b/css/site.css
@@ -64,15 +64,16 @@ h1,
     font-weight: 700;
     /* text-transform: uppercase; */
     letter-spacing: .1rem;
+   
 }
 
 a {
-    color: #91998c;
+    color: #F78521;
     text-decoration: none;
 }
 
 a:hover {
-    color: #F78521;
+    color: #E35540;
 
 }
 
@@ -128,8 +129,8 @@ section {
 .mainTitle {
     font-family: var(--ab-title-font);
     font-weight: 900;
-    font-size: 8rem;
-    line-height: 1rem;
+    font-size: 3rem;
+    height: 1rem;
     color: rgba(0, 0, 0, 1);
 }
 
@@ -203,7 +204,7 @@ section {
 .socialIcons {
     font-size: 2rem;
     transition: color 0.25s;
-    color: #91998c;
+    color: var(--ab-grey-300);
 }
 
 .socialIcons:hover {
@@ -262,6 +263,7 @@ footer.fixed-bottom {
 
 .resumeIconScreenAdjustment {
     margin-left: 4vw;
+    margin-top: 5vh;
 }
 
 /* make the text below file icons display on hover */
@@ -281,7 +283,7 @@ footer.fixed-bottom {
 /*/ Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
     .mainTitle {
-        font-size: 7rem;
+        font-size: 2rem;
         line-height: 5.5rem;
     }
 
@@ -317,7 +319,7 @@ footer.fixed-bottom {
     }
 
     .dynamicFileImg {
-        max-width: 15vw;
+        max-width: 12vw;
     }
 
     .customFlexColumn {
@@ -325,29 +327,24 @@ footer.fixed-bottom {
         flex-direction: row;
     }
 
-    .resumeIcon {
-        margin-top: 9.5vh;
-    }
+   
 }
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 
     .dynamicFileImg {
-        max-width: 30vw;
+        max-width: 11vw;
     }
 
-    .resumeIcon {
-        margin-top: 0vh;
-    }
-
+    
 }
 
 /* // X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
 
     .dynamicFileImg {
-        max-width: 30vw;
+        max-width: 11vw;
     }
 
     .resumeIconScreenAdjustment {
@@ -360,7 +357,7 @@ footer.fixed-bottom {
 @media (min-width: 1400px) {
 
     .dynamicFileImg {
-        max-width: 30vw;
+        max-width: 12vw;
     }
 }
 
