--- a/css/site.css
+++ b/css/site.css
@@ -277,11 +277,11 @@ footer.fixed-bottom {
 }
 
 .h1TitleText {
-    font-size: 7rem !important;
+    font-size: 5rem !important;
 }
 
 .h2SubtitleText {
-    font-size: 3rem !important;
+    font-size: 1.5rem !important;
     color: rgba(350, 250, 250, 0.8)
 }
 
@@ -312,6 +312,15 @@ footer.fixed-bottom {
 
     .hoverIcon:hover {
         transform: scale(1.03) translateY(-2%);
+    }
+
+    .h1TitleText {
+        font-size: 7rem !important;
+    }
+    
+    .h2SubtitleText {
+        font-size: 3rem !important;
+        color: rgba(350, 250, 250, 0.8)
     }
     
     .hoverText {
