Fixed link for Blog App

--- a/css/site.css
+++ b/css/site.css
@@ -109,7 +109,7 @@ section {
 
 #contact {
     background-color: #424242;
-    background-image: url(/img/clouds.jpg);
+    background-image: url(/img/pexels-robert-șerban-11279737.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
