Changed background images

--- a/css/site.css
+++ b/css/site.css
@@ -109,7 +109,7 @@ section {
 
 #contact {
     background-color: #424242;
-    background-image: url(/img/pexels-robert-șerban-11279737.jpg);
+    background-image: url(/img/clouds.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -225,7 +225,7 @@ footer.fixed-bottom {
 
 #home {
     background-color: black;
-    background-image: url(/img/Anyas/cooljardark.jpg);
+    background-image: url(/img/pexels-robert-șerban-11279737.jpg);
     background-size: 150%;
     background-position: center;
     background-repeat: no-repeat;
